hard-gists/353499f2e6e407883b32/run.log
=== Docker Run Log for 353499f2e6e407883b32 ===
Started at: Mi 29. Okt 13:54:26 CET 2025

[2025-10-29 13:54:26] START: Running container for 353499f2e6e407883b32
[2025-10-29 13:54:26] SUCCESS: Container 955063ea4081e233698583f0595f1b852cb860e92c313c1334e5288782a3b5ae started for 353499f2e6e407883b32
=== Container logs for 353499f2e6e407883b32 ===
  File "/snippet.py", line 114
    print np.mean(cost)
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 353499f2e6e407883b32 ===
[2025-10-29 13:54:28] INFO: Container 955063ea4081e233698583f0595f1b852cb860e92c313c1334e5288782a3b5ae has stopped
